@@ -1,8 +1,8 @@
 {
     "host": {
-        "host": "172.21.30.5",
-        "port": 16677,
-        "keep_alive_mode": true,
+        "host": "0.0.0.0",
+        "port": 0,
+        "keep_alive_mode": false,
         "keep_alive_interval": 300,
         "header_length": 2,
         "header_length_exists": true
@@ -35,9 +35,9 @@
     },
     "specification": {
         "rewrite_local_spec": false,
-        "remote_spec_url": "http://172.21.30.20:4242/specification",
+        "remote_spec_url": "",
         "backup_storage_depth": 30,
-        "backup_storage": false,
+        "backup_storage": true,
         "manual_input_mode": false
     }
 }
