@@ -12,14 +12,14 @@ from PyQt6 import QtCore, QtGui, QtWidgets
 class Ui_HotKeysHint(object):
     def setupUi(self, HotKeysHint):
         HotKeysHint.setObjectName("HotKeysHint")
-        HotKeysHint.resize(500, 712)
+        HotKeysHint.resize(500, 745)
         sizePolicy = QtWidgets.QSizePolicy(QtWidgets.QSizePolicy.Policy.Fixed, QtWidgets.QSizePolicy.Policy.Fixed)
         sizePolicy.setHorizontalStretch(0)
         sizePolicy.setVerticalStretch(0)
         sizePolicy.setHeightForWidth(HotKeysHint.sizePolicy().hasHeightForWidth())
         HotKeysHint.setSizePolicy(sizePolicy)
-        HotKeysHint.setMinimumSize(QtCore.QSize(500, 712))
-        HotKeysHint.setMaximumSize(QtCore.QSize(500, 712))
+        HotKeysHint.setMinimumSize(QtCore.QSize(500, 745))
+        HotKeysHint.setMaximumSize(QtCore.QSize(500, 745))
         self.gridLayout = QtWidgets.QGridLayout(HotKeysHint)
         self.gridLayout.setObjectName("gridLayout")
         self.HintTable = QtWidgets.QTableWidget(parent=HotKeysHint)
@@ -42,7 +42,7 @@ class Ui_HotKeysHint(object):
         self.HintTable.setCornerButtonEnabled(False)
         self.HintTable.setObjectName("HintTable")
         self.HintTable.setColumnCount(2)
-        self.HintTable.setRowCount(22)
+        self.HintTable.setRowCount(23)
         item = QtWidgets.QTableWidgetItem()
         self.HintTable.setVerticalHeaderItem(0, item)
         item = QtWidgets.QTableWidgetItem()
@@ -87,6 +87,8 @@ class Ui_HotKeysHint(object):
         self.HintTable.setVerticalHeaderItem(20, item)
         item = QtWidgets.QTableWidgetItem()
         self.HintTable.setVerticalHeaderItem(21, item)
+        item = QtWidgets.QTableWidgetItem()
+        self.HintTable.setVerticalHeaderItem(22, item)
         item = QtWidgets.QTableWidgetItem()
         self.HintTable.setHorizontalHeaderItem(0, item)
         item = QtWidgets.QTableWidgetItem()
@@ -179,6 +181,10 @@ class Ui_HotKeysHint(object):
         self.HintTable.setItem(21, 0, item)
         item = QtWidgets.QTableWidgetItem()
         self.HintTable.setItem(21, 1, item)
+        item = QtWidgets.QTableWidgetItem()
+        self.HintTable.setItem(22, 0, item)
+        item = QtWidgets.QTableWidgetItem()
+        self.HintTable.setItem(22, 1, item)
         self.HintTable.horizontalHeader().setVisible(True)
         self.HintTable.horizontalHeader().setCascadingSectionResizes(False)
         self.HintTable.horizontalHeader().setDefaultSectionSize(200)
@@ -210,32 +216,34 @@ class Ui_HotKeysHint(object):
         item = self.HintTable.verticalHeaderItem(7)
         item.setText(_translate("HotKeysHint", "Ctrl + F"))
         item = self.HintTable.verticalHeaderItem(8)
-        item.setText(_translate("HotKeysHint", "Delete"))
+        item.setText(_translate("HotKeysHint", "Ctrl + C"))
         item = self.HintTable.verticalHeaderItem(9)
-        item.setText(_translate("HotKeysHint", "Ctrl + E"))
+        item.setText(_translate("HotKeysHint", "Delete"))
         item = self.HintTable.verticalHeaderItem(10)
-        item.setText(_translate("HotKeysHint", "Ctrl + W"))
+        item.setText(_translate("HotKeysHint", "Ctrl + E"))
         item = self.HintTable.verticalHeaderItem(11)
-        item.setText(_translate("HotKeysHint", "Ctrl + R"))
+        item.setText(_translate("HotKeysHint", "Ctrl + W"))
         item = self.HintTable.verticalHeaderItem(12)
-        item.setText(_translate("HotKeysHint", "Ctrl + L"))
+        item.setText(_translate("HotKeysHint", "Ctrl + R"))
         item = self.HintTable.verticalHeaderItem(13)
-        item.setText(_translate("HotKeysHint", "Ctrl + O"))
+        item.setText(_translate("HotKeysHint", "Ctrl + L"))
         item = self.HintTable.verticalHeaderItem(14)
-        item.setText(_translate("HotKeysHint", "Ctrl + S"))
+        item.setText(_translate("HotKeysHint", "Ctrl + O"))
         item = self.HintTable.verticalHeaderItem(15)
-        item.setText(_translate("HotKeysHint", "Ctrl + P"))
+        item.setText(_translate("HotKeysHint", "Ctrl + S"))
         item = self.HintTable.verticalHeaderItem(16)
-        item.setText(_translate("HotKeysHint", "Ctrl + Alt + P"))
+        item.setText(_translate("HotKeysHint", "Ctrl + P"))
         item = self.HintTable.verticalHeaderItem(17)
-        item.setText(_translate("HotKeysHint", "Ctrl + T"))
+        item.setText(_translate("HotKeysHint", "Ctrl + Alt + P"))
         item = self.HintTable.verticalHeaderItem(18)
-        item.setText(_translate("HotKeysHint", "Ctrl + PgUp"))
+        item.setText(_translate("HotKeysHint", "Ctrl + T"))
         item = self.HintTable.verticalHeaderItem(19)
-        item.setText(_translate("HotKeysHint", "Ctrl + PgDn"))
+        item.setText(_translate("HotKeysHint", "Ctrl + PgUp"))
         item = self.HintTable.verticalHeaderItem(20)
-        item.setText(_translate("HotKeysHint", "Ctrl + F4"))
+        item.setText(_translate("HotKeysHint", "Ctrl + PgDn"))
         item = self.HintTable.verticalHeaderItem(21)
+        item.setText(_translate("HotKeysHint", "Ctrl + F4"))
+        item = self.HintTable.verticalHeaderItem(22)
         item.setText(_translate("HotKeysHint", "Ctrl + Alt + Q"))
         item = self.HintTable.horizontalHeaderItem(0)
         item.setText(_translate("HotKeysHint", "Combination"))
@@ -276,60 +284,64 @@ class Ui_HotKeysHint(object):
         item = self.HintTable.item(7, 1)
         item.setText(_translate("HotKeysHint", "Search"))
         item = self.HintTable.item(8, 0)
-        item.setText(_translate("HotKeysHint", "Delete"))
+        item.setText(_translate("HotKeysHint", "Ctrl + C"))
         item = self.HintTable.item(8, 1)
-        item.setText(_translate("HotKeysHint", "Remove field"))
+        item.setText(_translate("HotKeysHint", "Copy current field data"))
         item = self.HintTable.item(9, 0)
-        item.setText(_translate("HotKeysHint", "Ctrl + E"))
+        item.setText(_translate("HotKeysHint", "Delete"))
         item = self.HintTable.item(9, 1)
-        item.setText(_translate("HotKeysHint", "Edit current field data"))
+        item.setText(_translate("HotKeysHint", "Remove field"))
         item = self.HintTable.item(10, 0)
-        item.setText(_translate("HotKeysHint", "Ctrl + W"))
+        item.setText(_translate("HotKeysHint", "Ctrl + E"))
         item = self.HintTable.item(10, 1)
-        item.setText(_translate("HotKeysHint", "Edit current field number"))
+        item.setText(_translate("HotKeysHint", "Edit current field data"))
         item = self.HintTable.item(11, 0)
-        item.setText(_translate("HotKeysHint", "Ctrl + R"))
+        item.setText(_translate("HotKeysHint", "Ctrl + W"))
         item = self.HintTable.item(11, 1)
-        item.setText(_translate("HotKeysHint", "Reconnect to host"))
+        item.setText(_translate("HotKeysHint", "Edit current field number"))
         item = self.HintTable.item(12, 0)
-        item.setText(_translate("HotKeysHint", "Ctrl + L"))
+        item.setText(_translate("HotKeysHint", "Ctrl + R"))
         item = self.HintTable.item(12, 1)
-        item.setText(_translate("HotKeysHint", "Clear log"))
+        item.setText(_translate("HotKeysHint", "Reconnect to host"))
         item = self.HintTable.item(13, 0)
-        item.setText(_translate("HotKeysHint", "Ctrl + O"))
+        item.setText(_translate("HotKeysHint", "Ctrl + L"))
         item = self.HintTable.item(13, 1)
-        item.setText(_translate("HotKeysHint", "Open transaction file(s)"))
+        item.setText(_translate("HotKeysHint", "Clear log"))
         item = self.HintTable.item(14, 0)
-        item.setText(_translate("HotKeysHint", "Ctrl + S"))
+        item.setText(_translate("HotKeysHint", "Ctrl + O"))
         item = self.HintTable.item(14, 1)
-        item.setText(_translate("HotKeysHint", "Save transaction(s) to file(s)"))
+        item.setText(_translate("HotKeysHint", "Open transaction file(s)"))
         item = self.HintTable.item(15, 0)
-        item.setText(_translate("HotKeysHint", "Ctrl + P"))
+        item.setText(_translate("HotKeysHint", "Ctrl + S"))
         item = self.HintTable.item(15, 1)
-        item.setText(_translate("HotKeysHint", "Print transaction data"))
+        item.setText(_translate("HotKeysHint", "Save transaction(s) to file(s)"))
         item = self.HintTable.item(16, 0)
-        item.setText(_translate("HotKeysHint", "Ctrl + Alt + P"))
+        item.setText(_translate("HotKeysHint", "Ctrl + P"))
         item = self.HintTable.item(16, 1)
-        item.setText(_translate("HotKeysHint", "Print SIGNAL logo"))
+        item.setText(_translate("HotKeysHint", "Print transaction data"))
         item = self.HintTable.item(17, 0)
-        item.setText(_translate("HotKeysHint", "Ctrl + T"))
+        item.setText(_translate("HotKeysHint", "Ctrl + Alt + P"))
         item = self.HintTable.item(17, 1)
-        item.setText(_translate("HotKeysHint", "New tab"))
+        item.setText(_translate("HotKeysHint", "Print SIGNAL logo"))
         item = self.HintTable.item(18, 0)
-        item.setText(_translate("HotKeysHint", "Ctrl + PgUp"))
+        item.setText(_translate("HotKeysHint", "Ctrl + T"))
         item = self.HintTable.item(18, 1)
-        item.setText(_translate("HotKeysHint", "Next tab"))
+        item.setText(_translate("HotKeysHint", "New tab"))
         item = self.HintTable.item(19, 0)
-        item.setText(_translate("HotKeysHint", "Ctrl + PgDn"))
+        item.setText(_translate("HotKeysHint", "Ctrl + PgUp"))
         item = self.HintTable.item(19, 1)
-        item.setText(_translate("HotKeysHint", "Previous Tab"))
+        item.setText(_translate("HotKeysHint", "Next tab"))
         item = self.HintTable.item(20, 0)
-        item.setText(_translate("HotKeysHint", "Ctrl + F4"))
+        item.setText(_translate("HotKeysHint", "Ctrl + PgDn"))
         item = self.HintTable.item(20, 1)
-        item.setText(_translate("HotKeysHint", "Close current tab"))
+        item.setText(_translate("HotKeysHint", "Previous Tab"))
         item = self.HintTable.item(21, 0)
-        item.setText(_translate("HotKeysHint", "Ctrl + Alt + Q"))
+        item.setText(_translate("HotKeysHint", "Ctrl + F4"))
         item = self.HintTable.item(21, 1)
+        item.setText(_translate("HotKeysHint", "Close current tab"))
+        item = self.HintTable.item(22, 0)
+        item.setText(_translate("HotKeysHint", "Ctrl + Alt + Q"))
+        item = self.HintTable.item(22, 1)
         item.setText(_translate("HotKeysHint", "Quit SIGNAL"))
         self.HintTable.setSortingEnabled(__sortingEnabled)
 
