@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>500</width>
-    <height>712</height>
+    <height>745</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,13 +19,13 @@
   <property name="minimumSize">
    <size>
     <width>500</width>
-    <height>712</height>
+    <height>745</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>500</width>
-    <height>712</height>
+    <height>745</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -135,6 +135,11 @@
      <row>
       <property name="text">
        <string>Ctrl + F</string>
+      </property>
+     </row>
+     <row>
+      <property name="text">
+       <string>Ctrl + C</string>
       </property>
      </row>
      <row>
@@ -299,140 +304,150 @@
      </item>
      <item row="8" column="0">
       <property name="text">
-       <string>Delete</string>
+       <string>Ctrl + C</string>
       </property>
      </item>
      <item row="8" column="1">
       <property name="text">
-       <string>Remove field</string>
+       <string>Copy current field data</string>
       </property>
      </item>
      <item row="9" column="0">
       <property name="text">
-       <string>Ctrl + E</string>
+       <string>Delete</string>
       </property>
      </item>
      <item row="9" column="1">
       <property name="text">
-       <string>Edit current field data</string>
+       <string>Remove field</string>
       </property>
      </item>
      <item row="10" column="0">
       <property name="text">
-       <string>Ctrl + W</string>
+       <string>Ctrl + E</string>
       </property>
      </item>
      <item row="10" column="1">
       <property name="text">
-       <string>Edit current field number</string>
+       <string>Edit current field data</string>
       </property>
      </item>
      <item row="11" column="0">
       <property name="text">
-       <string>Ctrl + R</string>
+       <string>Ctrl + W</string>
       </property>
      </item>
      <item row="11" column="1">
       <property name="text">
-       <string>Reconnect to host</string>
+       <string>Edit current field number</string>
       </property>
      </item>
      <item row="12" column="0">
       <property name="text">
-       <string>Ctrl + L</string>
+       <string>Ctrl + R</string>
       </property>
      </item>
      <item row="12" column="1">
       <property name="text">
-       <string>Clear log</string>
+       <string>Reconnect to host</string>
       </property>
      </item>
      <item row="13" column="0">
       <property name="text">
-       <string>Ctrl + O</string>
+       <string>Ctrl + L</string>
       </property>
      </item>
      <item row="13" column="1">
       <property name="text">
-       <string>Open transaction file(s)</string>
+       <string>Clear log</string>
       </property>
      </item>
      <item row="14" column="0">
       <property name="text">
-       <string>Ctrl + S</string>
+       <string>Ctrl + O</string>
       </property>
      </item>
      <item row="14" column="1">
       <property name="text">
-       <string>Save transaction(s) to file(s)</string>
+       <string>Open transaction file(s)</string>
       </property>
      </item>
      <item row="15" column="0">
       <property name="text">
-       <string>Ctrl + P</string>
+       <string>Ctrl + S</string>
       </property>
      </item>
      <item row="15" column="1">
       <property name="text">
-       <string>Print transaction data</string>
+       <string>Save transaction(s) to file(s)</string>
       </property>
      </item>
      <item row="16" column="0">
       <property name="text">
-       <string>Ctrl + Alt + P</string>
+       <string>Ctrl + P</string>
       </property>
      </item>
      <item row="16" column="1">
       <property name="text">
-       <string>Print SIGNAL logo</string>
+       <string>Print transaction data</string>
       </property>
      </item>
      <item row="17" column="0">
       <property name="text">
-       <string>Ctrl + T</string>
+       <string>Ctrl + Alt + P</string>
       </property>
      </item>
      <item row="17" column="1">
       <property name="text">
-       <string>New tab</string>
+       <string>Print SIGNAL logo</string>
       </property>
      </item>
      <item row="18" column="0">
       <property name="text">
-       <string>Ctrl + PgUp</string>
+       <string>Ctrl + T</string>
       </property>
      </item>
      <item row="18" column="1">
       <property name="text">
-       <string>Next tab</string>
+       <string>New tab</string>
       </property>
      </item>
      <item row="19" column="0">
       <property name="text">
-       <string>Ctrl + PgDn</string>
+       <string>Ctrl + PgUp</string>
       </property>
      </item>
      <item row="19" column="1">
       <property name="text">
-       <string>Previous Tab</string>
+       <string>Next tab</string>
       </property>
      </item>
      <item row="20" column="0">
       <property name="text">
-       <string>Ctrl + F4</string>
+       <string>Ctrl + PgDn</string>
       </property>
      </item>
      <item row="20" column="1">
       <property name="text">
-       <string>Close current tab</string>
+       <string>Previous Tab</string>
       </property>
      </item>
      <item row="21" column="0">
       <property name="text">
-       <string>Ctrl + Alt + Q</string>
+       <string>Ctrl + F4</string>
       </property>
      </item>
      <item row="21" column="1">
+      <property name="text">
+       <string>Close current tab</string>
+      </property>
+     </item>
+     <item row="22" column="0">
+      <property name="text">
+       <string>Ctrl + Alt + Q</string>
+      </property>
+     </item>
+     <item row="22" column="1">
       <property name="text">
        <string>Quit SIGNAL</string>
       </property>
