@@ -183,6 +183,8 @@
 + --config-file --print-config
 + Tabs round by keyboard
 + Add hotkeys info CTRL + F4, CTRL + PG-UP/PG-DOWN, Ctrl + Alt + P
++ Ctrl+C secrets
++ Expand reversal window to long utrnno
 
 
 
